# article_writer_crew

./: README.md  article.md  article.txt  crewai_flow.html  pyproject.toml
src/article_writer/: article.md  main.py
src/article_writer/crews/poem_crew/: poem_crew.py
src/article_writer/crews/poem_crew/config/: agents.yaml  tasks.yaml
