[project]
name = "article_writer"
version = "0.1.0"
description = "article_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "pydantic>=2.10.6",
    "streamlit>=1.42.0",
]

[project.scripts]
kickoff = "article_writer.main:kickoff"
plot = "article_writer.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
